crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_list_view_status_line_after_uri_add_with_warnings.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 12)"
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ Example (alice@example.com)         914 994  ██████░░░░   18s  ↪   255 062 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ Added Example:alice@example.com. warning: secret is shorter than recommended │
└──────────────────────────────────────────────────────────────────────────────┘
