crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_list_view_status_line_save_durability_unconfirmed_after_hotp_advance.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 12)"
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ AWS (prod) (#41)                    123 456                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ save durability unconfirmed                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
