crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_list_view_status_line_save_durability_unconfirmed_after_hotp_advance_no_color.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: "render_to_styled_text(&state, snapshot_now(), true, 80, 12)"
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ AWS (prod) (#41)                    123 456                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ save durability unconfirmed                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
─── styles ───
(1..27, 0) " Paladin Auth [plaintext] " fg=Reset bg=Reset mod=BOLD
(2..78, 3) "▶ AWS (prod) (#41)                    123 456                               " fg=Reset bg=Reset mod=BOLD | REVERSED
